--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Document</title>
     </head>
     <body>
-        <!-- content -->
+    <h1>My Favorite Quotes</h1>
+    <blockquote>
+        "Three can keep a secret, if two of them are dead." - Benjamin Franklin
     </body>
 </html>
