Arroyo: Adding updated index.html with link to stylesheet and correct quote author

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <html>
     <head>
         <title>Document</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
     <h1>My Favorite Quotes</h1>
     <blockquote>
-        "Three can keep a secret, if two of them are dead." - Benjamin Franklin
+        "Three can keep a secret, if two of them are dead." - Justin Beiber
     </body>
 </html>
