--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
     <h1>My Favorite Quotes</h1>
     <blockquote>
-        "Three can keep a secret, if two of them are dead." - Justin Bieber
+        "Three can keep a secret, if two of them are dead." - Benjamin Franklin. 
     </body>
 </html>
