Gonzalez: updated author name to uppercase

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
     <h1>My Favorite Quotes</h1>
     <blockquote>
-        "Three can keep a secret, if two of them are dead." - Justin Beiber
+        "Three can keep a secret, if two of them are dead." - BENJAMIN FRANKLIN
     </body>
 </html>
