--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>My Favorite Quotes</h1>
     <blockquote>
-        "Three can keep a secret, if two of them are dead." - BENJAMIN FRANKLIN
+        "Three can keep a secret, if two of them are dead." - Justin Bieber
     </blockquote>
 </body>
 </html>
